--- a/client/signup.html
+++ b/client/signup.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script type='text/javascript' src='../server/user/userController.js'></script>
+  <link rel="stylesheet" href="/client/css/bower.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="/client/js/vendors.js"></script>
 </head>
-<body >
-  <div>CREATE AN ACCOUNT
-  <form action="/signup" method="post">
-      <div>
-        <label for="username">Username:</label>
-        <input id="username" type="text" name="username">
+<body>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Language Exchange</a>
       </div>
-      <div>
-        <label for="password">Password:</label>
-        <input id="password" type="password" name="password">
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/">Home</a></li>
+          <li><a href="/signin">Sign in</a><li>
+        </ul>
       </div>
-      <div>
-        <input type="submit" value="signup">
+    </div>
+  </nav>
+  <div class="jumbotron">
+    <div class="container">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <form action="/signup" method="post">
+          <h3>Create an account</h3>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Username</label>
+            <input type="text" class="form-control" id="username" placeholder="Enter username">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-success" value="signup">Submit</button>
+        </form>
+        <form method="get" action="/auth/facebook">
+          <button type="submit" class="btn btn-primary">Sign Up with Facebook</button>
+        </form>
       </div>
-  </form>
+      <div class="col-md-4"></div>
+    </div>
   </div>
 </body>
 </html>
