--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><button type="button" class="btn btn-success navbar-btn">Sign in</button></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
-            <li><button type="button" class="btn btn-success navbar-btn">Sign up</button></li>
+            <li><a href="/signin">Sign in</a><li>
+            <li><a href="/signup">Sign up</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
