--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- inject:css -->
   <link rel="stylesheet" href="/client/css/bower.css">
   <!-- endinject -->
-
   <script type='text/javascript' src='http://cdn.icecomm.io/icecomm.js'></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- inject:js -->
@@ -17,7 +15,6 @@
   <!-- endinject -->
 </head>
 <body ng-controller='selectLanguageController'>
-
    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -27,18 +24,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Language Exchange</a>
+          <a class="navbar-brand" href="/">Language Exchange</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="/">Home</a></li>
             <li><a href="/signin">Sign in</a><li>
             <li><a href="/signup">Sign up</a></li>
+            <li><a href="/logout">Log Out</a></li>
           </ul>
-        </div><!--/.navbar-collapse -->
+        </div>
       </div>
     </nav>
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
         <div ng-if="!showChatApp">
@@ -49,9 +46,7 @@
         <div ng-if="showChatApp" class="fx-fade-up fx-speed-500 fx-easing-back">
           <h2> Topic: How did you spend your last vacation? </h1>
         </div>
-       
         <br>
-      
         <div ng-if="!language.native"class="list-group col-md-4 fx-fade-left fx-speed-500 fx-easing-back">
           <h2> I want to practice...  </h2>
           <a ng-repeat="lang in languages"  href="#" ng-click="language.desired=lang[0]" class="list-group-item">
@@ -68,15 +63,12 @@
             <span class="glyphicon glyphicon-menu-right right" aria-hidden="true"></span>
           </a>
         </div>
-
         <div id="videos" ng-show="language.native">
           <div id='myVideo' class="inline">
             <video id='localVideo' autoplay></video>
           </div>
         </div>
-
         <br>
-
         <form class="form-horizontal" id='chatApp' ng-show='showChatApp'>
           <div class="form-group">
             <textarea class="form-control" id='chatBox' readonly ng-model='convo'></textarea><br>
@@ -85,15 +77,12 @@
           </div>
         </form>
       </div>
-
     </div>
-
     <div class="container">
       <hr>
-
       <footer>
         <p>&copy; Language Exchange, Inc. 2014</p>
       </footer>
-    </div> <!-- /container -->
+    </div>
 </body>
 </html>
