--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
         <div ng-if="showChatApp" class="fx-fade-up fx-speed-500 fx-easing-back">
           <h2> Topic: How did you spend your last vacation? </h1>
+          <button type="button" class="btn btn-primary" ng-click="changeTopic()">Change Topic</button>
         </div>
         <br>
         <div ng-if="!language.native"class="list-group col-md-4 fx-fade-left fx-speed-500 fx-easing-back">
