--- a/client/signin.html
+++ b/client/signin.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" href="/client/css/bower.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="/client/js/vendors.js"></script>
-</head>
-<body>
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
@@ -15,12 +7,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Language Exchange</a>
+        <a class="navbar-brand" href="#/">Language Exchange</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">Home</a></li>
-          <li><a href="/signup">Sign up</a><li>
+          <li><a href="#/">Home</a></li>
+          <li><a href="#/signup">Sign up</a><li>
         </ul>
       </div>
     </div>
@@ -48,5 +40,3 @@
       <div class="col-md-4"></div>
     </div>
   </div>
-</body>
-</html>
