--- a/index.html
+++ b/index.html
@@ -5,85 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- inject:css -->
-  <link rel="stylesheet" href="/client/css/bower.css">
+  <link rel="stylesheet" href="./client/css/bower.css">
   <!-- endinject -->
   <script type='text/javascript' src='http://cdn.icecomm.io/icecomm.js'></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- inject:js -->
-  <script src="/client/js/vendors.js"></script>
-  <script src="/client/js/app.js"></script>
+  <script src="./client/js/vendors.js"></script>
+  <script src="./client/js/app.js"></script>
+
   <!-- endinject -->
 </head>
 <body ng-controller='selectLanguageController'>
-   <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Language Exchange</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/">Home</a></li>
-            <li><a href="/signin">Sign in</a><li>
-            <li><a href="/signup">Sign up</a></li>
-            <li><a href="/logout">Log Out</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="jumbotron">
-      <div class="container">
-        <div ng-if="!showChatApp">
-        <h1>Talk French with a Frenchman.</h1>
-        <p>Language Exchange instantly connects you with other language learners so you can practice together.<br>
-           Trade langauges. Trade stories.</p>
-        </div>
-        <div ng-if="showChatApp" class="fx-fade-up fx-speed-500 fx-easing-back">
-          <h2> Topic: How did you spend your last vacation? </h1>
-          <button type="button" class="btn btn-primary" ng-click="changeTopic()">Change Topic</button>
-        </div>
-        <br>
-        <div ng-if="!language.native"class="list-group col-md-4 fx-fade-left fx-speed-500 fx-easing-back">
-          <h2> I want to practice...  </h2>
-          <a ng-repeat="lang in languages"  href="#" ng-click="language.desired=lang[0]" class="list-group-item">
-            <span class="flag-icon flag-icon-{{ lang[1] }}"></span>
-            {{ lang[0] }}
-            <span class="glyphicon glyphicon-menu-right right" aria-hidden="true"></span>
-          </a>
-        </div>
-        <div ng-if="language.desired && !language.native" class="list-group col-md-4 fx-fade-left fx-speed-500 fx-easing-back">
-          <h2> My native language is...  </h2>
-          <a ng-repeat="lang in languages"  href="#" ng-click="language.native=lang[0]; submitLanguages(language);" class="list-group-item">
-            <span class="flag-icon flag-icon-{{ lang[1] }}"></span>
-            {{ lang[0] }}
-            <span class="glyphicon glyphicon-menu-right right" aria-hidden="true"></span>
-          </a>
-        </div>
-        <div id="videos" ng-show="language.native">
-          <div id='myVideo' class="inline">
-            <video id='localVideo' autoplay></video>
-          </div>
-        </div>
-        <br>
-        <form class="form-horizontal" id='chatApp' ng-show='showChatApp'>
-          <div class="form-group">
-            <textarea class="form-control" id='chatBox' readonly ng-model='convo'></textarea><br>
-            <input class="form-control inline" id='chatMsg' type='text' ng-keypress='handleKeyPress($event)' ng-model='msg'>
-            <button class="btn btn-primary inline" ng-click='sendMsg()'>Send</button>
-          </div>
-        </form>
-      </div>
-    </div>
-    <div class="container">
-      <hr>
-      <footer>
-        <p>&copy; Language Exchange, Inc. 2014</p>
-      </footer>
-    </div>
+  <div ui-view class="view"></div>
+  <div ng-include="'./client/footer.html'"></div>
+
+  <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 </body>
 </html>
