Adds dashboard page and updates css

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
   <div ng-include="'./client/footer.html'"></div>
 
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 </body>
 </html>
