--- a/client/signin.html
+++ b/client/signin.html
@@ -29,7 +29,7 @@
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Password" onClick="sendSocket()">
           </div>
           <button type="submit" class="btn btn-success" value="signup">Submit</button>
         </form>
@@ -40,3 +40,10 @@
       <div class="col-md-4"></div>
     </div>
   </div>
+  <script>
+    var socket = io();
+
+    function sendSocket() {
+      socket.emit('signIn', 'I am signed in');
+    }
+  </script>
