--- a/client/signup.html
+++ b/client/signup.html
@@ -25,7 +25,7 @@
           <h3>Create an account</h3>
           <div class="form-group">
             <label for="exampleInputEmail1">Username</label>
-            <input type="text" class="form-control" id="username" placeholder="Enter username">
+            <input type="text" class="form-control" id="username" placeholder="Enter username" name='username'>
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
