--- a/client/home.html
+++ b/client/home.html
@@ -11,10 +11,10 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#/">Home</a></li>
-        <li><a href="#/signin">Sign in</a><li>
-        <li><a href="#/signup">Sign up</a></li>
-        <li><a href="#/logout">Log Out</a></li>
+        <li><a href="/#/">Home</a></li>
+        <li><a href="/#/signin">Sign in</a><li>
+        <li><a href="/#/signup">Sign up</a></li>
+        <li><a href="/#/logout">Log Out</a></li>
       </ul>
     </div>
   </div>
