--- a/client/signup.html
+++ b/client/signup.html
@@ -11,8 +11,8 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#/">Home</a></li>
-          <li><a href="#/signin">Sign in</a><li>
+          <li><a href="/#/">Home</a></li>
+          <li><a href="/#/signin">Sign in</a><li>
         </ul>
       </div>
     </div>
