--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -65,7 +65,7 @@
           <img src="{{user.photoUrl}}" class="matchphotos">
           <!-- <span class="onlineIndicator">{{online}}</span> -->
           <br>
-          <button class="btn btn-primary connectButton" ng-click="">
+          <button class="btn btn-primary connectButton" ng-click="connect(7)" id="{{user.id}}">
             Connect
           </button>
           <hr>
