--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 </head>
 <body ng-controller='selectLanguageController'>
   <div ui-view class="view"></div>
+  <div id="videos">
+    <div id='myVideo' class="inline">
+      <video id='localVideo' autoplay></video>
+    </div>
+  </div>
   <div ng-include="'./client/footer.html'"></div>
 
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -33,12 +38,61 @@
         window.sessionStorage.setItem('event.sid', data);
       });
 
+      // socket.on('connecting', function (data) {
+      //   console.log(data);
+      // });
+      
       socket.on('connecting', function (data) {
-        console.log(data);
+        console.log("New room: ", data);
+
+      var comm = new Icecomm('aOeyDUCGOSgnxElKI9eHiq9SRh2afLql1l1lDyxzYMYEabvTF6');
+
+      comm.connect(data);
+
+      // Show video of the user
+      comm.on('local', function (options) {
+        console.log(options.stream);
+        $('#localVideo').attr("src", options.stream);
       });
+
+      // // When two people are connected, display the video of the language partner
+      // // and show the chat app
+      // $scope.comm.on('connected', function (options) {
+      //   var foreignVidDiv = $('<div class="inline"></div>');
+      //   foreignVidDiv.append(options.video)
+      //   foreignVidDiv.children().addClass('foreignVideo');
+      //   $('#videos').prepend(foreignVidDiv);
+      //   // document.getElementById('videos').insertBefore(document.createElement("$BUTTON")options.video, document.getElementById('myVideo'));
+      //   $scope.$apply(function () { 
+      //     $scope.showChatApp = true; 
+      //   });
+      // })
+
+      // // When a chat message is received from the language partner,
+      // // translate the message using Google Translate and
+      // // display both the original message and the translated message
+      // $scope.comm.on('data', function (options) {
+      //   $scope.$apply(function(){
+      //     Translate.translateMsg(options.data, $scope.language.native, $scope.language.desired)
+      //     .then(function (translatedMsg) {
+      //       console.log(translatedMsg);
+      //       var translatedText = translatedMsg.data.translations[0].translatedText
+      //       $scope.convo += 'Them: ' + options.data + '\n';
+      //       $scope.convo += 'Them (translated): ' + translatedText + '\n';
+      //       $scope.scrollBottom();
+      //     })
+      //   });
+      // });
+
+      // // When the language partner leaves, remove the video and chatbox
+      // $scope.comm.on('disconnect', function (options) {
+      //   document.getElementById(options.callerID).remove();
+      //   $scope.$apply(function () {
+      //     $scope.showChatApp = false;
+      //   });
+      // });
+    });
 
     </script>
 </body>
 </html>
-
-<!-- how to get a user's socket id when we click on their profile. -->
