--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
   <script>
       var socket = io();
+      var comm = new Icecomm('aOeyDUCGOSgnxElKI9eHiq9SRh2afLql1l1lDyxzYMYEabvTF6');
 
       socket.on('connected', function (data) {
         console.log(data);
@@ -37,60 +38,78 @@
       socket.on('session', function (data) {
         window.sessionStorage.setItem('event.sid', data);
       });
+      
+      socket.on('joinRoom', function (data) {
+        console.log("JOining room", data);
+        comm.connect(data);
 
-      // socket.on('connecting', function (data) {
-      //   console.log(data);
-      // });
+        comm.on('local', function (options) {
+          console.log(options.stream);
+          $('#localVideo').attr("src", options.stream);
+        });
+
+        // When two people are connected, display the video of the language partner
+        // and show the chat app
+        comm.on('connected', function (options) {
+          var foreignVidDiv = $('<div class="inline"></div>');
+          foreignVidDiv.append(options.video)
+          foreignVidDiv.children().addClass('foreignVideo');
+          $('#videos').prepend(foreignVidDiv);
+          // document.getElementById('videos').insertBefore(document.createElement("$BUTTON")options.video, document.getElementById('myVideo'));
+          // $scope.$apply(function () { 
+          //   $scope.showChatApp = true; 
+          // });
+        });
+      });
       
       socket.on('connecting', function (data) {
         console.log("New room: ", data);
 
-      var comm = new Icecomm('aOeyDUCGOSgnxElKI9eHiq9SRh2afLql1l1lDyxzYMYEabvTF6');
+        comm.connect(data.room);
+        socket.emit('roomRequest', data);
 
-      comm.connect(data);
+        // Show video of the user
+        comm.on('local', function (options) {
+          console.log(options.stream);
+          $('#localVideo').attr("src", options.stream);
+        });
 
-      // Show video of the user
-      comm.on('local', function (options) {
-        console.log(options.stream);
-        $('#localVideo').attr("src", options.stream);
-      });
+        // When two people are connected, display the video of the language partner
+        // and show the chat app
+        comm.on('connected', function (options) {
+          var foreignVidDiv = $('<div class="inline"></div>');
+          foreignVidDiv.append(options.video)
+          foreignVidDiv.children().addClass('foreignVideo');
+          $('#videos').prepend(foreignVidDiv);
+          // document.getElementById('videos').insertBefore(document.createElement("$BUTTON")options.video, document.getElementById('myVideo'));
+          // $scope.$apply(function () { 
+          //   $scope.showChatApp = true; 
+          // });
+        });
 
-      // // When two people are connected, display the video of the language partner
-      // // and show the chat app
-      // $scope.comm.on('connected', function (options) {
-      //   var foreignVidDiv = $('<div class="inline"></div>');
-      //   foreignVidDiv.append(options.video)
-      //   foreignVidDiv.children().addClass('foreignVideo');
-      //   $('#videos').prepend(foreignVidDiv);
-      //   // document.getElementById('videos').insertBefore(document.createElement("$BUTTON")options.video, document.getElementById('myVideo'));
-      //   $scope.$apply(function () { 
-      //     $scope.showChatApp = true; 
-      //   });
-      // })
+        // // When a chat message is received from the language partner,
+        // // translate the message using Google Translate and
+        // // display both the original message and the translated message
+        // $scope.comm.on('data', function (options) {
+        //   $scope.$apply(function(){
+        //     Translate.translateMsg(options.data, $scope.language.native, $scope.language.desired)
+        //     .then(function (translatedMsg) {
+        //       console.log(translatedMsg);
+        //       var translatedText = translatedMsg.data.translations[0].translatedText
+        //       $scope.convo += 'Them: ' + options.data + '\n';
+        //       $scope.convo += 'Them (translated): ' + translatedText + '\n';
+        //       $scope.scrollBottom();
+        //     })
+        //   });
+        // });
 
-      // // When a chat message is received from the language partner,
-      // // translate the message using Google Translate and
-      // // display both the original message and the translated message
-      // $scope.comm.on('data', function (options) {
-      //   $scope.$apply(function(){
-      //     Translate.translateMsg(options.data, $scope.language.native, $scope.language.desired)
-      //     .then(function (translatedMsg) {
-      //       console.log(translatedMsg);
-      //       var translatedText = translatedMsg.data.translations[0].translatedText
-      //       $scope.convo += 'Them: ' + options.data + '\n';
-      //       $scope.convo += 'Them (translated): ' + translatedText + '\n';
-      //       $scope.scrollBottom();
-      //     })
-      //   });
-      // });
-
-      // // When the language partner leaves, remove the video and chatbox
-      // $scope.comm.on('disconnect', function (options) {
-      //   document.getElementById(options.callerID).remove();
-      //   $scope.$apply(function () {
-      //     $scope.showChatApp = false;
-      //   });
-      // });
+        // // When the language partner leaves, remove the video and chatbox
+        // $scope.comm.on('disconnect', function (options) {
+        //   document.getElementById(options.callerID).remove();
+        //   $scope.$apply(function () {
+        //     $scope.showChatApp = false;
+        //   });
+        // });
     });
 
     </script>
