Gets myId dynamically in dashboard.html from $window

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -51,7 +51,7 @@
           <!-- <span class="onlineIndicator">{{online}}</span> -->
           <br>
           <h5>{{user.nativeRating}}</h5>
-          <button class="btn btn-primary connectButton" ng-click="connect({'u_id': 1, 'my_id': 2})" id="{{user.id}}">
+          <button class="btn btn-primary connectButton" ng-click="connect({'u_id': 1, 'my_id': myId})" id="{{user.id}}">
             Connect
           </button>
           <hr>
