--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
   <script src="./client/js/vendors.js"></script>
   <script src="./client/js/app.js"></script>
   <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+  <script>
+    function getCookie(cname) {
+      var name = cname + "=";
+      var ca = document.cookie.split(';');
+      for(var i=0; i<ca.length; i++) {
+          var c = ca[i];
+          while (c.charAt(0)==' ') {
+            c = c.substring(1);
+          }
+          if (c.indexOf(name) == 0) {
+            console.log('c.substring(name.length,c.length)', c.substring(name.length,c.length));
+            return c.substring(name.length,c.length);
+          }
+      }
+      return "";
+   }
+   window.myId = getCookie('u_id');
+   console.log('myId', myId);
+  </script>
 
   <!-- endinject -->
 </head>
