Updates dashboard and index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       }
       return "";
    }
-   window.myId = getCookie('u_id');
+   window.myId = parseInt(getCookie('u_id'));
    console.log('myId', myId);
   </script>
 
